--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,7 +70,11 @@
 			<artifactId>validation-api</artifactId>
 			<version>2.0.1.Final</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session</artifactId>
+			<version>1.3.5.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
